[B] Fix calendar alignment on edit project
[Delivers #136746293]

--- a/app/assets/stylesheets/partials/_components_sections.scss
+++ b/app/assets/stylesheets/partials/_components_sections.scss
@@ -343,7 +343,7 @@
 
   &.subheader {
     z-index: 150;
-    margin-top: $headerHeight;
+    padding-top: $headerHeight;
     margin-bottom: 0;
     .padded-container {
       & > div {
